<resources>
    <string name="app_name" translatable="false">NewsApp</string>
    <string name="title">Global News</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="category">category</string>
    <string name="language">Language</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="auto" translatable="false">Auto</string>
    <string name="country">Country</string>

</resources>